# gridworks-journalkeeper

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  alembic.ini  db_inconsistency.py  demo.py  docker-compose.yaml  elec_prices.csv  g_node.json  hinge.py  index.html  load_problem_events.py  loading_beech.py  loading_beech_readings.py  loading_oak.py  make_db.sh  noxfile.py  postgres_views.md  pyproject.toml  requirements.txt  run_journal_keeper.py  run_weather.py  sema_seed_request.yaml  simple_orm_hacks.py  template.env  visualizer_api.py
.github/workflows/: constraints.txt  labeler.yml  release.yml  tests.yml
CodeGenerationTools/GridworksCore/: DataSchema.odxml  aicapture.json  clean.sh
alembic/: env.py
alembic/versions/: 08bb9e1becc1_create_message_and_scada_table.py  20e18e25ee6b_ta_name_uniqueness_for_data_channels.py  2bfd96639dd9_add_start_s_to_data_channel.py  2d8b1ad23a72_indices_in_readings_table.py  37ce3bbd137e_create_data_channel_table.py  391fc0462f5a_nodal_hourly_energy.py  53e6251de737_rename_type_name_to_message_type_name.py  647c1ecccecc_create_messages_table.py  8307576a573f_data_channel_has_terminal_asset_alias.py  a185339ca321_create_messages_table.py  b08628433b03_unique_triple_per_ta_for_data_channels.py  b371e63f0b02_drop_readings.py  b829ccf129c3_add_foreign_key_constraint_and_update_.py  ed9df502fb56_add_uniqueness_constraint_to_messages.py  f183a8a6ac28_create_data_channels_readings_and_make_.py  fc0ccbb3b83e_non_null_field_constraints_for_nodal_.py
alerts/: alert_generator.py  alerts_documentation.md  ear_check.py  heatcall_check.py  hot_check.py  hp_is_back_check.py  hpon_ha_check.py  nodata_check.py  not_in_atn.py  onpeak_check.py  setpoint_check.py  store-pump-check.py
alerts/old_alerts/: heatcall_check.py  hot_check.py  hp_is_back_check.py  hpon_ha_check.py  nodata_check.py  not_in_atn.py  onpeak_check.py  setpoint_check.py  snapshots_check.py  store-pump-check.py
ansible/: inventory.yml  setup-journaldb.yml
docs/: CNAME  conf.py  index.md  journaldb-setup.md  new_instance.md  reference.md  requirements.txt  sdk-types.rst
docs/asls/: enums.rst  types.rst
docs/types/: batched-readings.rst  channel-readings.rst  data-channel-gt.rst  fsm-atomic-report.rst  fsm-full-report.rst  g-node-gt.rst  gridworks-event-gt-sh-status.rst  gridworks-event-snapshot-spaceheat.rst  gt-sh-booleanactuator-cmd-status.rst  gt-sh-multipurpose-telemetry-status.rst  gt-sh-simple-telemetry-status.rst  gt-sh-status.rst  heartbeat-a.rst  keyparam-change-log.rst  power-watts.rst  snapshot-spaceheat.rst  spaceheat-node-gt.rst  telemetry-snapshot-spaceheat.rst
obsolete_scripts/: README.md  utils.py
obsolete_scripts/first_season/: house_0.py  load_readings.py  oak_names.py
scripts/: point_at_dev_hack.py  point_at_prod_observe.py  regen_sema_snapshot.sh
service/: install  jkpause  jkrestart  jkstart  jkstatus  jkstop  journalkeeper-restart.service  journalkeeper-restart.timer  journalkeeper.service  uninstall
src/: power_to_energy.py
src/gjk/: __init__.py  __main__.py  api_db.py  api_types.py  back_office_hack.py  codec.py  config.py  db_utils.py  flo_params_house0_persistor.py  journal_keeper.py  journal_keeper_hack.py  layout_lite_persistor.py  message_persistence_info.py  power_to_energy.py  property_format.py  pseudo_channels.py  report_event_persistor.py  rest_api.py  s3_message_importer.py  sema_message_persistor.py  sema_seed_request.yaml  synthetic_channels.py  transpiler.py  utils.py  visualizer_api.py  weather_forecast_persistor.py  weather_service.py  zone_heat_call_pseudo_channel.py
src/gwp/: __init__.py  __main__.py  api_types.py  back_office_hack.py  backoffice_hack.py  config.py  journaldb_maker.py  message_sql.py  models.py  persister.py  persister_hack.py
tests/: __init__.py  conftest.py  test_codec.py  test_custom_persistor_idempotency.py  test_journal_keeper.py  test_live_amqp.py  test_main.py  test_s3_message_importer.py  test_transpiler.py  test_utils.py  test_uuid5_message_id.py
tests/data/: data_channels.json  gridworks_ack_s3_object.json
tests/enums/: actor_class_test.py  change_aquastat_control_test.py  change_heat_pump_control_test.py  change_heatcall_source_test.py  change_lg_operating_mode_test.py  change_primary_pump_control_test.py  change_primary_pump_state_test.py  change_relay_pin_test.py  change_relay_state_test.py  change_store_flow_direction_test.py  change_store_flow_relay_test.py  change_valve_state_test.py  fsm_action_type_test.py  fsm_event_type_test.py  fsm_name_test.py  fsm_report_type_test.py  g_node_role_test.py  g_node_status_test.py  gpm_from_hz_method_test.py  hz_calc_method_test.py  kind_of_param_test.py  log_level_test.py  make_model_test.py  market_price_unit_test.py  market_quantity_unit_test.py  pico_cycler_state_test.py  problem_type_test.py  relay_closed_or_open_test.py  relay_pin_set_test.py  relay_wiring_config_test.py  store_flow_direction_test.py  store_flow_relay_test.py  strategy_test.py  telemetry_name_test.py  temp_calc_method_test.py  turn_hp_on_off_test.py  unit_test.py
tests/old_types/: test_batched_readings.py  test_gridworks_event_gt_sh_status.py  test_gridworks_event_snapshot_spaceheat.py  test_gt_sh_multipurpose_telemetry_status.py  test_gt_sh_simple_telemetry_status.py  test_telemetry_snapshot_spaceheat.py
tests/sample_messages/: beech_layout.json  hw1.isone.me.versant.keene.beech.scada-gridworks.event.gt.sh.status-1699886100360.json  hw1.isone.me.versant.keene.beech.scada-gridworks.event.gt.sh.status-1715905380350-100.26.91.172.json  hw1.isone.me.versant.keene.beech.scada-gridworks.event.snapshot.spaceheat-1715905530296-100.26.91.172.json  hw1.isone.me.versant.keene.beech.scada-power.watts-1715904078460-100.26.91.172.json  silly.json
tests/types/: test_atn_bid.py  test_batched_readings.py  test_channel_config.py  test_channel_readings.py  test_data_channel_gt.py  test_energy_instruction.py  test_flo_params_house0.py  test_fsm_atomic_report.py  test_fsm_event.py  test_glitch.py  (+40 more)
visualizer/: flo.py  hinge.py  visualizer_api.py
(+522 files in other folders)
