[tool.poetry]
name = "gridworks-journalkeeper"
version = "0.1.0"
description = "Gridworks Journal Keeper"
authors = ["GridWorks <gridworks@gridworks-consulting.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/thegridelectric/gridworks-journalkeeper"
repository = "https://github.com/thegridelectric/gridworks-journalkeeper"
documentation = "https://gridworks-journalkeeper.readthedocs.io"
packages = [
    { include = "gjk", from = "src" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/thegridelectric/gridworks-journalkeeper/releases"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
click = ">=8.0.1"
boto3 = "^1.26.3"

gridworks-base = "^0.3.0"
sqlalchemy = "^2.0.31"
pendulum = "^3.0.0"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
deepdiff = "^8.0.1"
awscli = "^1.34.21"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"

[tool.poetry.group.dev.dependencies]
Pygments = ">=2.10.0"
coverage = {extras = ["toml"], version = ">=6.2"}
# darglint = ">=1.8.1"
furo = ">=2021.11.12"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}
ruff = "^0.5.6"
pika-stubs = "^0.1.3"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["gjk", "tests"]

[tool.coverage.report]
show_missing = false
fail_under = 70

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".ci",
    ".github",
    "CodeGenerationTools",
    "for_docker",
    "rabbit",
    ".git",
    ".mypy_cache",
    ".nox",
    "htmlcov",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "pythonProject",
    ".idea",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
]
output-format = "concise"
fix = true
show-fixes = true

[tool.ruff.format]
preview = true

[tool.ruff.lint]
# default select used by  ruff: ["E4", "E7", "E9", "F"]
select = ["B","C90","E4", "E7", "E9","F","I","N","PL", "W",]
ignore = ["PLR0904", "PLW1514", "W191",]
preview = true

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
#    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
#    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
#    # The below are debateable
#    "PLR2004", # Magic value used in comparison, ...
#    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]
