[project]
name = "gridworks-journalkeeper"
version = "0.1.1"
description = "Gridworks Journal Keeper"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "GridWorks", email = "gridworks@gridworks-consulting.com" }
]

requires-python = ">=3.12,<3.14"

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "click>=8.0.1",
    "boto3>=1.26.3",
    "sqlalchemy>=2.0.31",
    "pendulum>=3.0.0",
    "alembic>=1.13.2",
    "psycopg2-binary>=2.9.9",
    "deepdiff>=8.0.1",
    "awscli>=1.34.21",
    "fastapi>=0.115.2",
    "uvicorn>=0.31.1",
    "requests>=2.32.3",
    "pytz>=2024.2",
    "result>=0.17.0",
    "gridworks-base>=0.5.2",
    "gw_data>=0.3.1"
]

[project.optional-dependencies]
dev = [
    "Pygments>=2.10.0",
    "coverage[toml]>=6.2",
    "furo>=2021.11.12",
    "mypy>=0.930",
    "pep8-naming>=0.12.1",
    "pre-commit>=2.16.0",
    "pre-commit-hooks>=4.1.0",
    "pytest>=6.2.5",
    "pyupgrade>=2.29.1",
    "sphinx>=4.3.2",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-click>=3.0.2",
    "xdoctest[colors]>=0.15.10",
    "myst-parser>=0.16.1",
    "ruff>=0.5.6",
    "pika-stubs>=0.1.3",
]

[project.urls]
Homepage = "https://github.com/thegridelectric/gridworks-journalkeeper"
Repository = "https://github.com/thegridelectric/gridworks-journalkeeper"
Documentation = "https://gridworks-journalkeeper.readthedocs.io"
Changelog = "https://github.com/thegridelectric/gridworks-journalkeeper/releases"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gjk"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["gjk", "tests"]

[tool.coverage.report]
show_missing = false
fail_under = 70

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.ruff]
exclude = [
    ".ci",
    ".github",
    "CodeGenerationTools",
    "for_docker",
    "rabbit",
    ".git",
    ".mypy_cache",
    "htmlcov",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "pythonProject",
    ".idea",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "src/gjk/sema"
]
output-format = "concise"
fix = true
show-fixes = true

[tool.uv.sources]
gw_data = { path = "../gridworks-data/" }

[tool.ruff.format]
preview = true

[tool.ruff.lint]
# default select used by  ruff: ["E4", "E7", "E9", "F"]
select = ["E4", "E7", "E9", "F"]
#select = ["B","C90","E4", "E7", "E9","F","I","N","PL", "W",]
ignore = ["PLR0904", "PLW1514", "W191",]
preview = true

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101", # asserts allowed in tests...
]

[dependency-groups]
dev = [
    "botocore[crt]>=1.42.25",
    "pyright>=1.1.408",
]
